ultpoc/istio-gw.yaml
#-------------------- istio gateway -------------------#
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: PASSTHROUGH
#     mode: SIMPLE # enables HTTPS on this port
#     serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
#     privateKey: /etc/istio/ingressgateway-certs/tls.key
