ultpoc/istio-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: hello-destinationrule
spec:
  host: hello.default.svc.cluster.local
  subsets:
  - name: v2
    labels:
      version: v2
  - name: v1
    labels:
      version: v1
